--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,253 +1,283 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/primary1"
     android:orientation="vertical"
     android:weightSum="6"
-    android:background="@color/primary1"
     tools:context=".MainActivity">
-   <LinearLayout
-       android:gravity="center"
-       android:layout_width="match_parent"
-       android:layout_height="0dp"
-       android:layout_weight="2"
-       android:orientation="vertical"
-       android:background="@color/primary1"
-       android:padding="30dp"
-       >
 
-       <TextView
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:fontFamily="@font/roboto"
-           android:text="Hello..."
-           android:textColor="@color/white"
-           android:textSize="25sp" />
-       <LinearLayout
-           android:layout_marginTop="10dp"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:orientation="horizontal"
-           >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:background="@color/primary1"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="30dp">
 
-           <TextView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:fontFamily="@font/signika"
-               android:text="Pending tasks"
-               android:textColor="@color/white"
-               android:textSize="18sp" />
-           <TextView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:fontFamily="@font/signika"
-               android:text="\t\t0"
-               android:textColor="@color/white"
-               android:textSize="18sp" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto"
+            android:text="Hello..."
+            android:textColor="@color/white"
+            android:textSize="25sp" />
 
-       </LinearLayout>
-       <LinearLayout
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:orientation="horizontal"
-           >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
 
-           <TextView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:fontFamily="@font/signika"
-               android:text="Next Alarm :"
-               android:textColor="@color/white"
-               android:textSize="18sp" />
-           <TextView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:fontFamily="@font/signika"
-               android:text="\t\t0"
-               android:textColor="@color/white"
-               android:textSize="18sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/signika"
+                android:text="Pending tasks"
+                android:textColor="@color/white"
+                android:textSize="18sp" />
 
-       </LinearLayout>
-       <LinearLayout
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:orientation="horizontal"
-           >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/signika"
+                android:text="\t\t0"
+                android:textColor="@color/white"
+                android:textSize="18sp" />
 
-           <TextView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:fontFamily="@font/signika"
-               android:text="Next Notification Time :"
-               android:textColor="@color/white"
-               android:textSize="18sp" />
-           <TextView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:fontFamily="@font/signika"
-               android:text="\t\t0"
-               android:textColor="@color/white"
-               android:textSize="18sp" />
+        </LinearLayout>
 
-       </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-   </LinearLayout>
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="0dp"
-       android:layout_weight="4"
-       android:background="@drawable/toproundedback"
-       android:orientation="vertical"
-       android:weightSum="2"
-       >
-       <LinearLayout
-           android:padding="10dp"
-           android:layout_width="match_parent"
-           android:layout_height="0dp"
-           android:layout_weight="1"
-           android:orientation="horizontal"
-           android:weightSum="2"
-           >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/signika"
+                android:text="Next Alarm :"
+                android:textColor="@color/white"
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/signika"
+                android:text="\t\t0"
+                android:textColor="@color/white"
+                android:textSize="18sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/signika"
+                android:text="Next Notification Time :"
+                android:textColor="@color/white"
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/signika"
+                android:text="\t\t0"
+                android:textColor="@color/white"
+                android:textSize="18sp" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="4"
+        android:background="@drawable/toproundedback"
+        android:orientation="vertical"
+        android:weightSum="2">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:padding="10dp"
+            android:weightSum="2">
+
             <LinearLayout
                 android:id="@+id/addnotes"
-                android:padding="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:background="@drawable/roundedfromallside"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="20dp"
                 android:layout_weight="1"
+                android:background="@drawable/roundedfromallside"
                 android:orientation="vertical"
-                android:weightSum="4"
-                >
+                android:weightSum="4">
+
                 <ImageView
+                    android:padding="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="3"
-                    android:src="@drawable/ic_baseline_note_add_24"
+                    android:src="@drawable/ic_baseline_note_add_24" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/overlay_dark_20"
                     />
                 <TextView
+                    android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
+                    android:fontFamily="@font/roboto_medium"
+                    android:gravity="center_horizontal"
                     android:text="Add Notes"
-                    android:textColor="@color/primary1"
                     android:textAlignment="center"
-                    android:textSize="20sp"
-                    android:fontFamily="@font/roboto_medium"
-                    android:gravity="center_horizontal" />
-
-            </LinearLayout>
-           <LinearLayout
-               android:padding="20dp"
-               android:layout_marginTop="10dp"
-               android:layout_marginRight="10dp"
-               android:layout_marginLeft="10dp"
-                android:background="@drawable/roundedfromallside"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:weightSum="4"
-                >
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="3"
-                    android:src="@drawable/ic_baseline_add_alarm_24"
-                    />
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:text="Add Alarm"
                     android:textColor="@color/primary1"
-                    android:textAlignment="center"
-                    android:textSize="20sp"
-                    android:fontFamily="@font/roboto_medium"
-                    android:gravity="center_horizontal" />
+                    android:textSize="20sp" />
 
             </LinearLayout>
 
-
-       </LinearLayout>
-       <LinearLayout
-           android:padding="10dp"
-           android:layout_width="match_parent"
-           android:layout_height="0dp"
-           android:layout_weight="1"
-           android:orientation="horizontal"
-           android:weightSum="2"
-           >
             <LinearLayout
-                android:padding="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginBottom="10dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_weight="1"
                 android:background="@drawable/roundedfromallside"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
                 android:orientation="vertical"
-                android:weightSum="4"
-                >
+                android:weightSum="4">
+
                 <ImageView
+                    android:padding="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="3"
-                    android:src="@drawable/ic_baseline_airline_seat_recline_extra_24"
+                    android:src="@drawable/ic_baseline_add_alarm_24" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/overlay_dark_20"
                     />
                 <TextView
+                    android:paddingTop="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
+                    android:fontFamily="@font/roboto_medium"
+                    android:gravity="center_horizontal"
+                    android:text="Add Alarm"
+                    android:textAlignment="center"
+                    android:textColor="@color/primary1"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:padding="10dp"
+            android:weightSum="2">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_weight="1"
+                android:background="@drawable/roundedfromallside"
+                android:orientation="vertical"
+                android:weightSum="4">
+
+                <ImageView
+                    android:padding="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="3"
+                    android:src="@drawable/ic_baseline_airline_seat_recline_extra_24" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/overlay_dark_20"
+                    />
+                <TextView
+                    android:paddingTop="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/roboto_medium"
+                    android:gravity="center_horizontal"
                     android:text="Relax time"
-                    android:textColor="@color/primary1"
                     android:textAlignment="center"
-                    android:textSize="20sp"
-                    android:fontFamily="@font/roboto_medium"
-                    android:gravity="center_horizontal" />
+                    android:textColor="@color/primary1"
+                    android:textSize="20sp" />
 
             </LinearLayout>
-           <LinearLayout
-               android:padding="20dp"
-               android:layout_marginTop="10dp"
-               android:layout_marginRight="10dp"
-               android:layout_marginLeft="10dp"                android:background="@drawable/roundedfromallside"
+
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="20dp"
                 android:layout_weight="1"
+                android:background="@drawable/roundedfromallside"
                 android:orientation="vertical"
-                android:weightSum="4"
-                >
+                android:weightSum="4">
+
                 <ImageView
+                    android:padding="30dp"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="3"
-                    android:src="@drawable/ic_baseline_share_24"
+                    android:src="@drawable/ic_baseline_share_24" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/overlay_dark_20"
                     />
                 <TextView
+                    android:paddingTop="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="Share Notes"
-                    android:textColor="@color/primary1"
-                    android:textAlignment="center"
-                    android:textSize="20sp"
                     android:fontFamily="@font/roboto_medium"
-                    android:gravity="center_horizontal" />
+                    android:gravity="center_horizontal"
+                    android:text="Share Notes"
+                    android:textAlignment="center"
+                    android:textColor="@color/primary1"
+                    android:textSize="20sp" />
 
             </LinearLayout>
 
 
-       </LinearLayout>
+        </LinearLayout>
 
 
-   </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
